--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ h1,h2,h3,h4,h5,h6,.ultrabold{font-family:Source Sans Pro Black,Source Sans Pro,V
   padding:4px;
   width:calc(100% - 8px);
   height:32px;
-  justify-content:space-between;
+  justify-content:center;
   color:#f0f0f0;
   text-shadow:var(--inset);
   backdrop-filter:blur(4px);
@@ -68,8 +68,7 @@ h1,h2,h3,h4,h5,h6,.ultrabold{font-family:Source Sans Pro Black,Source Sans Pro,V
   display:flex;
   width:25%;
 }
-.top-bar-section:nth-of-type(2){justify-content:center;}
-.top-bar-section:nth-of-type(3){justify-content:right;}
+.top-bar-section:nth-of-type(2){justify-content:right;}
 .top-bar-section button{
   width:128px;
   height:100%;
